--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>pom</packaging>
 
-	<!--子模块管理-->
-	<modules>
-		<module>thymeleaf-web</module>
-		<module>thymeleaf-service</module>
-		<module>thymeleaf-dao</module>
-		<module>thymeleaf-model</module>
-		<module>thymeleaf-common</module>
-	</modules>
+	<!--项目基本信息-->
+	<groupId>com.fisher.arch</groupId>
+	<artifactId>thymeleaf-demo</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>thymeleaf-demo</name>
+	<description>Demo project for Spring Boot multi moduls</description>
 
 	<!--设置父级依赖-->
 	<parent>
@@ -21,13 +19,16 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
-	<!--项目基本信息-->
-	<groupId>com.fisher.arch</groupId>
-	<artifactId>thymeleaf-demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>thymeleaf-demo</name>
-	<description>Demo project for Spring Boot multi moduls</description>
+	<!--子模块管理-->
+	<modules>
+		<module>thymeleaf-web</module>
+		<module>thymeleaf-service</module>
+		<module>thymeleaf-dao</module>
+		<module>thymeleaf-model</module>
+		<module>thymeleaf-common</module>
+	</modules>
 
+	<!--属性配置-->
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -49,6 +50,19 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--引入 redis-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>2.1.3.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
 		<!--引入google guava-->
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -61,15 +75,25 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
-	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+		<!--引入Gson-->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+
+		<!--引入Logback-->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+		</dependency>
+
+	</dependencies>
 
 </project>
