--- a/thymeleaf-dao/pom.xml
+++ b/thymeleaf-dao/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>thymeleaf-demo</artifactId>
         <groupId>com.fisher.arch</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -29,6 +30,13 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.2</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.9</version>
         </dependency>
     </dependencies>
 </project>
