--- a/thymeleaf-model/pom.xml
+++ b/thymeleaf-model/pom.xml
@@ -6,10 +6,10 @@
         <artifactId>thymeleaf-demo</artifactId>
         <groupId>com.fisher.arch</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>thymeleaf-model</artifactId>
-
 
 </project>
