--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,14 @@
 			<artifactId>logback-core</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-elasticsearch</artifactId>
+			<version>3.0.6.RELEASE</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 
