--- a/thymeleaf-web/pom.xml
+++ b/thymeleaf-web/pom.xml
@@ -82,6 +82,18 @@
             <artifactId>spring-cloud-starter-sleuth</artifactId>
             <version>2.0.1.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.voyager.beyonds.rsik</groupId>
+            <artifactId>rsik-manager-starter</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
     <profiles>
