--- a/thymeleaf-web/src/main/resources/application.yml
+++ b/thymeleaf-web/src/main/resources/application.yml
@@ -10,6 +10,11 @@ spring:
     admin:
       client:
         url: http://localhost:8081
+  data:
+    elasticsearch:
+      cluster-name: my-elasticsearch
+      cluster-nodes: localhost:9300
+
 management:
   endpoint:
     health:
@@ -29,3 +34,16 @@ thymeleaf:
       - server2
     enable: false
     test: aaa
+
+rsik:
+  rsik-host: http://datariskv2.intra.sit.beyonds.com/bigdata/ProRiskManagement
+  rsik-model-map:
+    coupon:
+      rsikServiceName: coupon
+      rsikServiceUrl: /v2/event
+    member:
+      rsikServiceName: member
+      rsikServiceUrl: /v2/event
+    mall:
+      rsikServiceName: mall
+      rsikServiceUrl: /v2/event
