--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
 			<version>3.0.6.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>3.11.2</version>
+		</dependency>
+
 	</dependencies>
 
 
