--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
 			<version>3.11.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.sentry</groupId>
+			<artifactId>sentry</artifactId>
+			<version>1.7.26</version>
+		</dependency>
+
 	</dependencies>
 
 
