--- a/webflux-demo/pom.xml
+++ b/webflux-demo/pom.xml
@@ -91,6 +91,18 @@
             <artifactId>druid</artifactId>
             <version>1.1.9</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
