[Add] mybatis 知识基本梳理
	梳理mybatis整体知识

end

--- a/webflux-demo/src/main/resources/config/application-dev.yml
+++ b/webflux-demo/src/main/resources/config/application-dev.yml
@@ -1,6 +1,5 @@
 server:
-  port: 10000
-
+  port: 10001
 
 custom:
   db:
@@ -9,8 +8,5 @@ custom:
     driver: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/auth_demo?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&allowMultiQueries=true
 
-spring:
-  profiles:
-    active: dev
 logging:
-  config: classpath:logback-spring.xml
+  path: ./logs
